# fermi_paradox_and_aurora_effect

./: .pre-commit-config.yaml  README.md
simulation/: dune-project  simulation.opam
simulation/test/: dune
