(lang dune 3.16)

(name simulation)

(generate_opam_files true)

(source
 (github jamoralesva/fermi_paradox_and_aurora_effect ))

(authors "Alejandro Morales")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name simulation)
 (synopsis "Este repositorio muestra una implementación en OCaml del paper https://arxiv.org/abs/1902.04450")
 (description "Este repositorio muestra una implementación en OCaml del paper https://arxiv.org/abs/1902.04450")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
